# ohhey

./: .clang-format  .gitignore  .gitmodules  README.md  TODO.md  meson.build  meson_options.txt
etc/: config copy.ini  config.ini
src/cli/: add.cpp  add.h  cli.h  compare.h  main.cpp  util.h
src/lib/: compare.cpp  compare.h  util.cpp  util.h
src/pam/: pam_ohhey.cpp  pam_ohhey_test.cpp  test-readme.txt
